Added Remaining Tests
